// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader snapshot-1 1`] = `
<div
  className="css-11zhy3w"
>
  <img
    alt="loading"
    className="css-kmx4e7"
    src="loading.gif"
  />
</div>
`;

exports[`Loader snapshot-2 1`] = `
<div
  className="css-11zhy3w"
>
  <img
    alt="loaded"
    className="css-kmx4e7"
    src="loading.svg"
  />
</div>
`;
